5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1846_1276.log
== SUBMITION (2019-06-22 16:20:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
		z[p]==max(z):
      print(p+1)
-- EXECUTION TIME:
0.700536
-- ERROR:
  File "/home/codebench/codes/1846/1276/main.py", line 9
    z[p]==max(z):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:21:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
		z[p]==max(z):
      	print(p+1)
-- EXECUTION TIME:
0.601387
-- ERROR:
  File "/home/codebench/codes/1846/1276/main.py", line 9
    z[p]==max(z):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:21:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
		z[p]==max(z):
      	print(p+1)
-- ERROR:
File "XXXX", line 9
    z[p]==max(z):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:21:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
		if z[p]==max(z):
      	print(p+1)
-- EXECUTION TIME:
0.84535
-- ERROR:
  File "/home/codebench/codes/1846/1276/main.py", line 10
    print(p+1)
             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:23:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
		if z[p]==max(z):
      	print(p+1)
-- ERROR:
File "XXXX", line 10
    print(p+1)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:23:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
      print(p+1)
-- EXECUTION TIME:
0.900085
-- ERROR:
  File "/home/codebench/codes/1846/1276/main.py", line 10
    print(p+1)
             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:23:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
      print(p+1)
-- ERROR:
File "XXXX", line 10
    print(p+1)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:24:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:25:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)
-- EXECUTION TIME:
1.16981
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1276/main.py", line 7, in <module>
    z[j]=sum(n[:,j])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:25:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:25:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:25:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)
-- EXECUTION TIME:
0.988647
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1276/main.py", line 7, in <module>
    z[j]=sum(n[:,j])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:26:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)
-- EXECUTION TIME:
1.04611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1276/main.py", line 7, in <module>
    z[j]=sum(n[:,j])
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:26:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:27:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(n[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:27:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for j in range(7):
	z[j]=sum(m[:,j])
for p in range(7):
	if z[p]==max(z):
		print(p+1)
-- EXECUTION TIME:
0.832526
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
